@@ -4,6 +4,7 @@ import org.junit.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -19,15 +20,15 @@ public class DepartmentSortTest {
     @Test
     public void resultOfSortAscendingIT() {
         DepartmentSort departmentSort = new DepartmentSort();
-        ArrayList<String> notSortedDepartments = new ArrayList<>(Arrays.asList(
+        List<String> notSortedDepartments = List.of(
                 "IT\\злые программисты\\грустные юниоры",
                 "IT\\админы",
                 "Маркетинговый отдел\\маркетологи",
                 "Маркетинговый отдел\\дизайнеры",
                 "IT\\злые программисты\\веселые миддлы"
-        ));
-        ArrayList<String> sortedDepartments = departmentSort.sortAsc(notSortedDepartments);
-        ArrayList<String> expectedDepartments = new ArrayList<>(Arrays.asList(
+        );
+        List<String> sortedDepartments = departmentSort.sortAsc(notSortedDepartments);
+        List<String> expectedDepartments = List.of(
                 "IT",
                 "IT\\админы",
                 "IT\\злые программисты",
@@ -36,7 +37,7 @@ public class DepartmentSortTest {
                 "Маркетинговый отдел",
                 "Маркетинговый отдел\\дизайнеры",
                 "Маркетинговый отдел\\маркетологи"
-        ));
+        );
         assertThat(sortedDepartments, is(expectedDepartments));
     }
 
@@ -44,15 +45,15 @@ public class DepartmentSortTest {
     @Test
     public void resultOfSortDescendingIT() {
         DepartmentSort departmentSort = new DepartmentSort();
-        ArrayList<String> notSortedDepartments = new ArrayList<>(Arrays.asList(
+        List<String> notSortedDepartments = List.of(
                 "IT\\злые программисты\\грустные юниоры",
                 "IT\\админы",
                 "Маркетинговый отдел\\маркетологи",
                 "Маркетинговый отдел\\дизайнеры",
                 "IT\\злые программисты\\веселые миддлы"
-        ));
-        ArrayList<String> sortedDepartments = departmentSort.sortDesc(notSortedDepartments);
-        ArrayList<String> expectedDepartments = new ArrayList<>(Arrays.asList(
+        );
+        List<String> sortedDepartments = departmentSort.sortDesc(notSortedDepartments);
+        List<String> expectedDepartments = List.of(
                 "Маркетинговый отдел",
                 "Маркетинговый отдел\\маркетологи",
                 "Маркетинговый отдел\\дизайнеры",
@@ -61,18 +62,18 @@ public class DepartmentSortTest {
                 "IT\\злые программисты\\грустные юниоры",
                 "IT\\злые программисты\\веселые миддлы",
                 "IT\\админы"
-        ));
+        );
         assertThat(sortedDepartments, is(expectedDepartments));
     }
 
     @Test
     public void resultOfSortAscendingDep() {
         DepartmentSort departmentSort = new DepartmentSort();
-        ArrayList<String> notSortedDepartments = new ArrayList<>(Arrays.asList(
+        List<String> notSortedDepartments = List.of(
                 "DEP1\\DEP2\\DEP3\\DEP4\\DEP5\\DEP6\\DEP7\\DEP8\\DEP9"
-        ));
-        ArrayList<String> sortedDepartments = departmentSort.sortAsc(notSortedDepartments);
-        ArrayList<String> expectedDepartments = new ArrayList<>(Arrays.asList(
+        );
+        List<String> sortedDepartments = departmentSort.sortAsc(notSortedDepartments);
+        List<String> expectedDepartments = List.of(
                 "DEP1",
                 "DEP1\\DEP2",
                 "DEP1\\DEP2\\DEP3",
@@ -82,14 +83,14 @@ public class DepartmentSortTest {
                 "DEP1\\DEP2\\DEP3\\DEP4\\DEP5\\DEP6\\DEP7",
                 "DEP1\\DEP2\\DEP3\\DEP4\\DEP5\\DEP6\\DEP7\\DEP8",
                 "DEP1\\DEP2\\DEP3\\DEP4\\DEP5\\DEP6\\DEP7\\DEP8\\DEP9"
-        ));
+        );
         assertThat(sortedDepartments, is(expectedDepartments));
     }
 
     @Test
     public void resultOfSortAscendingK() {
         DepartmentSort departmentSort = new DepartmentSort();
-        ArrayList<String> notSortedDepartments = new ArrayList<>(Arrays.asList(
+        List<String> notSortedDepartments = List.of(
                 "K1\\SK1",
                 "K1\\SK2",
                 "K1\\SK1\\SSK1",
@@ -97,9 +98,9 @@ public class DepartmentSortTest {
                 "K2",
                 "K2\\SK1\\SSK1",
                 "K2\\SK1\\SSK2"
-        ));
-        ArrayList<String> sortedDepartments = departmentSort.sortAsc(notSortedDepartments);
-        ArrayList<String> expectedDepartments = new ArrayList<>(Arrays.asList(
+        );
+        List<String> sortedDepartments = departmentSort.sortAsc(notSortedDepartments);
+        List<String> expectedDepartments = List.of(
                 "K1",
                 "K1\\SK1",
                 "K1\\SK1\\SSK1",
@@ -109,7 +110,7 @@ public class DepartmentSortTest {
                 "K2\\SK1",
                 "K2\\SK1\\SSK1",
                 "K2\\SK1\\SSK2"
-        ));
+        );
         assertThat(sortedDepartments, is(expectedDepartments));
     }
 
@@ -117,7 +118,7 @@ public class DepartmentSortTest {
     @Test
     public void resultOfSortDescendingK() {
         DepartmentSort departmentSort = new DepartmentSort();
-        ArrayList<String> notSortedDepartments = new ArrayList<>(Arrays.asList(
+        List<String> notSortedDepartments = List.of(
                 "K1\\SK1",
                 "K1\\SK2",
                 "K1\\SK1\\SSK1",
@@ -125,9 +126,9 @@ public class DepartmentSortTest {
                 "K2",
                 "K2\\SK1\\SSK1",
                 "K2\\SK1\\SSK2"
-        ));
-        ArrayList<String> sortedDepartments = departmentSort.sortDesc(notSortedDepartments);
-        ArrayList<String> expectedDepartments = new ArrayList<>(Arrays.asList(
+        );
+        List<String> sortedDepartments = departmentSort.sortDesc(notSortedDepartments);
+        List<String> expectedDepartments = List.of(
                 "K2",
                 "K2\\SK1",
                 "K2\\SK1\\SSK2",
@@ -137,7 +138,7 @@ public class DepartmentSortTest {
                 "K1\\SK1",
                 "K1\\SK1\\SSK2",
                 "K1\\SK1\\SSK1"
-        ));
+        );
         assertThat(sortedDepartments, is(expectedDepartments));
     }
 }
